# ProjectWind

./: .gitignore  .gitmodules  CMakeLists.txt  LED.py  README.md  drakeGeometryUtil.cpp  triggercontrol.py
Audio/: alsaaudio.py  pyaudioWave.py  pymedia.py
Drake/: CMakeLists.txt  Copy_of_dynamicsGradients.m  QuadPlantPenn.m  QuadWindPlant.m  QuadWindPlant.m~  QuadWindPlant_12.m  QuadWindPlant_noWindGradients.m  QuadWindPlant_numerical.m  QuadWindPlant_numerical.m~  QuadWindPlant_numerical_12.m  QuadWindPlant_numerical_12_CFattempt.m  QuadWindPlant_numerical_CFattempt.m  QuadWindPlant_wGaussianNoise.m  Test.m  UnitTest_ProblemCase.m  UnitTests_QuadWindPlant_numericalCpp.m  UnitTests_QuadWindPlant_numericalCpp.m~  WindDraw.m  WindDraw.m~  WindVisualizer.m  WindVisualizer.m~  WindVisualizer_rand.m  ddConsoleApp.out  drake_viewer.out  dynamicsGradientsCheck.m  dynamicsGradientsEllipsicalHypertan.m  dynamicsGradientsEllipsicalHypertan_5.m  dynamicsGradientsEllipsicalHypertan_5_closer.m  dynamicsGradients_FlyingSphere.m  dynamicsGradients_Wind.m  dynamics_no_grad_printexample.cpp  hypertan.m  matlab.mat  quadrotor.urdf  runPennDircolWObs.m  runPennDircolWObs.m~  runPennDircolWind.m  runPennDircolWind_numerical.m  runPennDircolWind_numerical_13to12.m  runPennDircolWind_numerical_rand.m  (+11 more)
FastFluidDynamics/: fast.cpp
FigureMaking/: SuperImpose.m  SuperImpose.m~  superImposeFunnel.m
ImageProcessing/: GoProundistort.m  GoProundistort.m~  GoProundistort_Hero3.m  GoProundistort_Hero3.m~  cameraParams2.mat  exThresholdSlider.m
Pneumatic-Vortex-cannon/: 10inch_Lip_0_60.DXF  (+20 more)
(+107 files in other folders)
